<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <LinearLayout
        android:id="@+id/history_item_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:showDividers="middle"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/history_item_date_text_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/history_default_date_text" />

        <View android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/history_item_winner_text_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/history_default_winner_text" />

        <View android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/history_item_others_text_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/history_default_others_text" />

    </LinearLayout>
</androidx.cardview.widget.CardView>